--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -5,8 +5,8 @@
         
         <div class="text-center mb-5">
           <a href="/" >
-            <img src="assets/images/4c.png" alt="Image" height="50" class="mb-3">
-            </a>
+            <img src="assets/images/fsb.png" alt="fsb" class="mb-1" style="width:250px">                
+          </a>
             <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
             <span class="text-600 font-medium line-height-3">Don't have an account?</span>
             <a (click)="onRegister()" class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
