--- a/src/app/components/auth/success/success.component.scss
+++ b/src/app/components/auth/success/success.component.scss
@@ -1,5 +1,5 @@
 .backg {
-    background: linear-gradient(270deg, #b7d9fb9b, #cedcff);
+    background: linear-gradient(270deg, #b1ffb8, #f5f5f5);
     background-size: 400% 400%;
 
     -webkit-animation: AnimationName 6s ease infinite;
@@ -21,8 +21,4 @@
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
-}
-
-small{
-    color: rgb(213, 0, 0);
 }
