--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,6 +1,6 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" routerLink="">
-        <img src="assets/images/4c.png" alt="logo">
+        <img src="assets/images/fsb.png" alt="logo">
         <span>Clubs Management</span>
     </a>
 
