--- a/src/app/components/auth/registration/registration.component.html
+++ b/src/app/components/auth/registration/registration.component.html
@@ -4,7 +4,7 @@
     <div class="grid justify-content-center p-2 lg:p-0" style="min-width:80%">
         <div class="col-12 mt-5  text-center">
             <a href="/" class="text-blue-500">
-                <img src="assets/images/fsb.png" alt="TT Image" class="mb-1" style="width:250px">                
+                <img src="assets/images/fsb.png" alt="FSB" class="mb-1" style="width:250px">                
             </a>
         </div>
 
@@ -34,10 +34,11 @@
                             <div class="field col-12">
                                 <label>Logo</label>
                                 <p-fileUpload class="pt-5" accept="image/png, image/jpeg" (onSelect)="onSelectLogo($event)"
+                                maxFileSize="1048575" invalidFileSizeMessageDetail= "Maximum permitted size is 1Mo."
                                 (onRemove)="onRemoveLogo()" [showCancelButton]=false  [showUploadButton]=false>
                                 </p-fileUpload>
                                 <div class="mt-1" *ngIf="(myForm.get('logo').touched)">
-                                    <small class="ng-dirty ng-invalid" *ngIf="myForm.get('logo').hasError('required')">Chart is required.</small>
+                                    <small class="ng-dirty ng-invalid" *ngIf="myForm.get('logo').hasError('required')">Logo is required.</small>
                                 </div>
                             </div>
 
@@ -111,12 +112,11 @@
                                             </div>
                                         </ng-template>
                                         <ng-template pTemplate="emptymessage">
-                                            <tr style="width:100%; min-width:100%;">
-                                                <td class="text-center" style="width:100%; min-width:100%;">
-                                                    <div class="flex justify-content-center text-center">No available teachers.</div>
-                                                </td>
+                                            <tr>
+                                              <td colspan="2" class="text-center">No available teachers.</td>
                                             </tr>
-                                          </ng-template>
+                                        </ng-template>
+
                                 </p-table>
                                 <div class="mt-1" *ngIf="(myForm.get('coordinator').touched)">
                                     <small class="ng-dirty ng-invalid" *ngIf="myForm.get('coordinator').hasError('required')">Coordinator is required.</small>
@@ -125,7 +125,8 @@
 
                             <div class="field col-12 md:col-6">
                                 <label for="document">The Chart of Student Clubs published by the University of Carthage. (PDF)</label>
-                                <p-fileUpload class="pt-5" accept="application/pdf" (onSelect)="onSelectUCrequest($event)"
+                                <p-fileUpload class="pt-5" accept="application/pdf" (onSelect)="onSelectUCrequest($event)" 
+                                maxFileSize="1048575" invalidFileSizeMessageDetail= "Maximum permitted size is 1Mo."
                                 (onRemove)="onRemoveUCrequest()" [showCancelButton]=false  [showUploadButton]=false>
                                 </p-fileUpload>
                                 <div class="mt-1" *ngIf="(myForm.get('UCrequest').touched)">
@@ -136,6 +137,7 @@
                             <div class="field col-12 md:col-6">
                                 <label for="document">The Chart of Student Clubs published by the Faculty of Science of Bizerte. (PDF)</label>
                                 <p-fileUpload class="pt-5" accept="application/pdf" (onSelect)="onSelectFSBrequest($event)"
+                                maxFileSize="1048575" invalidFileSizeMessageDetail= "Maximum permitted size is 1Mo."
                                 (onRemove)="onRemoveFSBrequest()" [showCancelButton]=false [showUploadButton]=false>
                                 </p-fileUpload>
                                 <div class="mt-1" *ngIf="(myForm.get('FSBrequest').touched)">
@@ -175,7 +177,7 @@
                             <div class="field col-12 md:col-3">
                                 <label for="dob">Date of Birth</label>
                                 <p-calendar formControlName="dob" [showIcon]="true" placeholder="dd/mm/yyyy" inputId="icon" dateFormat="dd-mm-yy"></p-calendar>
-                                <div *ngIf="(myForm.get('dob').invalid && myForm.get('dob').dirty)">
+                                <div *ngIf="(myForm.get('dob').invalid && myForm.get('dob').touched)">
                                     <small class="ng-dirty ng-invalid" *ngIf="myForm.get('dob').hasError('required')">Date of Birth is Required.</small>
                                     <small class="ng-dirty ng-invalid" *ngIf="myForm.get('dob').hasError('ageRange')">Invalid Age.</small>
                                 </div>
@@ -269,7 +271,7 @@
     
                     </form>
                     <p-button label="Submit" iconPos="right" [loading]="showLoading" 
-                        (click)="onRegister()" icon="pi pi-user" styleClass="w-full"></p-button>
+                        (click)="onRegister()" icon="pi pi-save" styleClass="w-full"></p-button>
 
                 </div>
                 
