--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,61 +1,67 @@
-<div class="grid">
+<div class="grid" *ngIf="this.as.isAdmin()">
 
-
-    <div class="col-12 lg:col-4 xl:col-4">
-        <div class="card mb-0">
-            <div class="flex justify-content-between mb-3">
-                <div>
-                    <span class="block text-500 font-medium mb-3">Clubs</span>
-                    <div class="text-900 font-medium text-xl">{{totalApprovedClubs}}</div>
+        <div class="col-12 lg:col-4 xl:col-4">
+            <div class="card mb-0">
+                <div class="flex justify-content-between mb-3">
+                    <div>
+                        <span class="block text-500 font-medium mb-3">Clubs</span>
+                        <div class="text-900 font-medium text-xl">{{totalApprovedClubs}}</div>
+                    </div>
+                    <div class="flex align-items-center justify-content-center bg-orange-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
+                        <i class="pi pi-shield text-orange-500 text-xl"></i>
+                    </div>
                 </div>
-                <div class="flex align-items-center justify-content-center bg-orange-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-shield text-orange-500 text-xl"></i>
-                </div>
+                <span class="text-green-500 font-medium">{{totalRequestedClubs}}</span>
+                <span class="text-500"> Requested Clubs</span>
             </div>
-            <span class="text-green-500 font-medium">{{totalRequestedClubs}}</span>
-            <span class="text-500"> Requested Clubs</span>
         </div>
-    </div>
-
-    <div class="col-12 lg:col-4 xl:col-4">
-        <div class="card mb-0">
-            <div class="flex justify-content-between mb-3">
-                <div>
-                    <span class="block text-500 font-medium mb-3">Events</span>
-                    <div class="text-900 font-medium text-xl">{{totalEvents}}</div>
+    
+        <div class="col-12 lg:col-4 xl:col-4">
+            <div class="card mb-0">
+                <div class="flex justify-content-between mb-3">
+                    <div>
+                        <span class="block text-500 font-medium mb-3">Events</span>
+                        <div class="text-900 font-medium text-xl">{{totalEvents}}</div>
+                    </div>
+                    <div class="flex align-items-center justify-content-center bg-blue-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
+                        <i class="pi pi-calendar text-blue-500 text-xl"></i>
+                    </div>
                 </div>
-                <div class="flex align-items-center justify-content-center bg-blue-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-calendar text-blue-500 text-xl"></i>
-                </div>
+                <span class="text-green-500 font-medium">{{totalApprovedEvents}} </span>
+                <span class="text-500">Approved</span>
             </div>
-            <span class="text-green-500 font-medium">{{totalApprovedEvents}} </span>
-            <span class="text-500">Approved</span>
         </div>
-    </div>
+        
+        <div class="col-12 lg:col-4 xl:col-4">
+            <div class="card mb-0">
+                <div class="flex justify-content-between mb-3">
+                    <div>
+                        <span class="block text-500 font-medium mb-3">Teachers</span>
+                        <div class="text-900 font-medium text-xl">{{totalTeachers}}</div>
+                    </div>
+                    <div class="flex align-items-center justify-content-center bg-cyan-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
+                        <i class="pi pi-briefcase text-cyan-500 text-xl"></i>
+                    </div>
+                </div>
+                <span class="text-green-500 font-medium">{{totalActiveTeachers}} </span>
+                <span class="text-500">Coordinators</span>
+            </div>
+        </div>
     
     
-    <div class="col-12 lg:col-4 xl:col-4">
-        <div class="card mb-0">
-            <div class="flex justify-content-between mb-3">
-                <div>
-                    <span class="block text-500 font-medium mb-3">Teachers</span>
-                    <div class="text-900 font-medium text-xl">{{totalTeachers}}</div>
-                </div>
-                <div class="flex align-items-center justify-content-center bg-cyan-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-briefcase text-cyan-500 text-xl"></i>
-                </div>
-            </div>
-            <span class="text-green-500 font-medium">{{totalActiveTeachers}} </span>
-            <span class="text-500">Coordinators</span>
-        </div>
-    </div>
 </div>
 
-<div class="col-12 xl:col-6">
+<div class="col-12 xl:col-12">
     <div class="card">
         <div class="flex justify-content-between align-items-center mb-5">
             <h5>Top Clubs</h5>
         </div>
+        <p-messages *ngIf="!clubs|| !clubs?.length" severity="info">
+            <ng-template pTemplate>
+                <i class="pi pi-ban"></i>
+                <div class="ml-2">No Clubs Found.</div>
+            </ng-template>
+        </p-messages>
         <ul class="list-none p-0 m-0" *ngFor="let club of clubs">
             <li class="flex flex-column md:flex-row md:align-items-center md:justify-content-between mb-4">
                 <div>
