latest and greatest

--- a/src/app/components/landing/landing-event/landing-event.component.html
+++ b/src/app/components/landing/landing-event/landing-event.component.html
@@ -4,17 +4,12 @@
 
 <div id="features" class="py-4 px-4 lg:px-8 mt-5 mx-0 lg:mx-8">
     <div class="grid justify-content-center">
-        <div class="col-12 text-center mt-8 mb-4">
-            <h2 class="text-900 font-normal mb-2">Events</h2>
-            <span class="text-600 text-2xl">Placerat in egestas erat...</span>
-        </div>
-
         
 
         <div class="col-12 mt-8 mb-8 p-2 md:p-8" >
             <div class="flex flex-column justify-content-center align-items-center text-center px-3 py-3 md:py-0">
-                <h3 class="text-gray-900 mb-2">Events</h3>
-                <span class="text-gray-600 text-2xl">Peak Interactive</span>
+                <h2 class="text-900 font-normal mb-2">Events</h2>
+                <span class="text-gray-600 text-2xl">Will be Available Soon (wallah)</span>
                 <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-2xl mt-4" style="max-width:800px;">“Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.”</p>
                 <!-- <img src="assets/demo/images/landing/peak-logo.svg" class="mt-4" alt="Company logo"> -->
 
