--- a/src/app/components/leader components/myevents/myevents.component.html
+++ b/src/app/components/leader components/myevents/myevents.component.html
@@ -2,8 +2,8 @@
 <div class="grid grid-nogutter surface-section text-800">
     <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
         <section>
-            <span class="block text-6xl font-bold mb-1 mt-4">Events will be available once your club is</span>
-            <div class="text-6xl text-green-600 font-bold mb-3">Verified</div>
+            <span class="block text-6xl font-bold mb-1 mt-4">Create requests for your upcoming</span>
+            <div class="text-6xl text-green-600 font-bold mb-3">Events</div>
         </section>
     </div>
     <div class="col-12 md:col-6 overflow-hidden">
@@ -12,8 +12,6 @@
 </div>
 <div class="grid">
   <div class="col-12">
-
-    <div class="card">
 
       <p-toolbar styleClass="mb-1">
         <ng-template pTemplate="left">
@@ -116,7 +114,7 @@
           </tr>
         </ng-template>
       </p-table>
-    </div>
+    
   </div>
 </div>
 
